footer at bottom fixes on all templates

--- a/app/design/frontend/creo/default/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/creo/default/template/customer/form/forgotpassword.phtml
@@ -58,6 +58,9 @@
 </div>
 </div>
 </div>
+</div>
+</div>
+</div>
 <script type="text/javascript">
 //<![CDATA[
     var dataForm = new VarienForm('form-validate', true);
