--- a/app/design/frontend/creo/default/template/customer/form/login.phtml
+++ b/app/design/frontend/creo/default/template/customer/form/login.phtml
@@ -74,7 +74,7 @@
         <div class="col2-set">
             <div class="col-1 new-users">
                 <div class="buttons-set">
-                    <button type="button" title="<?php echo $this->__('Create an Account') ?>" class="button" onclick="window.location='<?php echo $this->getCreateAccountUrl() ?>';"><span><span><?php echo $this->__('Create an Account') ?></span></span></button>
+                    <button type="button" title="<?php echo $this->__('Create an Account') ?>" class="button" onClick="window.location='<?php echo $this->getCreateAccountUrl() ?>';"><span><span><?php echo $this->__('Create an Account') ?></span></span></button>
                 </div>
             </div>
             <div class="col-2 registered-users">
