Removing Ghost code and update wishlist button.

--- a/app/design/frontend/creo/default/template/wishlist/item/list.phtml
+++ b/app/design/frontend/creo/default/template/wishlist/item/list.phtml
@@ -139,7 +139,7 @@ $product = $item->getProduct();
 
       <div class="btn-holder">
                  
-                    <a href="javascript:void(0)" onclick="updateWishList()"><span class="span1"><span class="span2">UPDATE WISHLIST</span></span></a>
+                    <a style="display:none" href="javascript:void(0)" onclick="updateWishList()"><span class="span1"><span class="span2">UPDATE WISHLIST</span></span></a>
                     <a href="javascript:void(0)" onclick="addAllWItemsToCart()">ADD ALL TO CART</a>
                   </div>
 
