--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -11,6 +11,7 @@
 html {
 	box-sizing: border-box;
 	height: 100%;
+	background: #000;
 }
 iframe#fancybox-frame1438432377523 html{background: none;}
 *,
@@ -21,8 +22,7 @@ body {
 	margin: 0;
 	color: #040707;
 	font: 14px/16px "Roboto Condensed", Helvetica, Arial, sans-serif;
-	background: #000;
-	height: 100%;
+	background: #fff;
 	min-width: 320px;
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust: none;
@@ -38,6 +38,19 @@ a {
 }
 a:focus{text-decoration: none;}
 a:hover { text-decoration: underline; }
+input[type=text], input[type=password], input[type=file], input[type=submit],input[type=email], textarea{-webkit-appearance:none; border-radius:0;}
+input[type="search"]::-webkit-search-cancel-button {
+	-webkit-appearance: none;
+	display:none;
+}
+input[type=search]::-webkit-search-cancel-button,
+input[type=search]::-webkit-search-decoration,
+input[type=search]::-webkit-search-results-button,
+input[type=search]::-webkit-search-results-decoration {-webkit-appearance:none;}
+input[type=search] {
+	-webkit-appearance:none;
+	-webkit-box-sizing:content-box;
+}
 input,
 textarea,
 select {
@@ -385,7 +398,6 @@ p.style1 {
 	background: #fff;
 }
 #wrapper > .container {
-	background: #fff;
 	padding: 0 30px;
 }
 #header {
@@ -3878,8 +3890,8 @@ div.fme-filter dd li{overflow: visible !important;}
 	position: absolute;
 	top: 0;
 	bottom: 0;
-	margin: 0 -9999px;
-	padding: 0 9999px;
+	margin: 0 -9999px -9999px;
+	padding: 0 9999px 9999px;
 	content: '';
 }
 #footer .right-area{
