CMS Pages restyle.

--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -4172,7 +4172,7 @@ div.fme-filter dd li{overflow: visible !important;}
 	line-height:0;
 }
 
-.cms-page-view.cms-privacy-policy-cookie-restriction-mode .std > p {
+.cms-page-view .std > p {
 	line-height:inherit;
 	letter-spacing:1px;
 	margin:0 0 1.2em;
