--- a/skin/frontend/creo/default/custom.css
+++ b/skin/frontend/creo/default/custom.css
@@ -231,7 +231,7 @@
 	border-style: solid;
 	border-width: 0 0 0 4px;
 	color: #aaa;
-	margin: 0 13px 0 0;
+	margin: 0;
 	overflow: hidden;
 	padding: 0;
 	width: 81%;
