--- a/app/design/frontend/creo/default/template/persistent/customer/form/login.phtml
+++ b/app/design/frontend/creo/default/template/persistent/customer/form/login.phtml
@@ -107,7 +107,7 @@
             <input name="context" type="hidden" value="checkout" />
         <?php endif; ?>
     </form>
-
+	<a class="login-with-fb page-view" rel=facebook-connect>Login with Facebook</a>
     <?php echo $this->getChildHtml('form_register');?>
 </div>
 <?php //echo $this->getMessagesBlock()->toHtml() ?>
