--- a/skin/frontend/creo/default/css/custom.sami.css
+++ b/skin/frontend/creo/default/css/custom.sami.css
@@ -594,3 +594,7 @@ div.fme-filter a.fme_layered_attribute {
     margin-top: 20px;
     text-transform: uppercase;
 }
+
+.login-fb .pslogin-block.pslogin-login {
+	margin:0;
+}
