--- a/app/design/frontend/creo/default/template/persistent/customer/form/login.phtml
+++ b/app/design/frontend/creo/default/template/persistent/customer/form/login.phtml
@@ -107,11 +107,11 @@
             <input name="context" type="hidden" value="checkout" />
         <?php endif; ?>
     </form>
-    <div class="login-fb">
+<?php /*?>    <div class="login-fb">
     <a href="#" onclick="login();return false;" class="fb_button fb_button_medium">
                         <span class="fb_button_text">Login with Facebook</span>
                     </a>
-    </div>
+    </div><?php */?>
     <?php echo $this->getChildHtml('form_register');?>
 </div>
 <?php //echo $this->getMessagesBlock()->toHtml() ?>
