--- a/app/design/frontend/creo/default/template/email/order/invoice/items.phtml
+++ b/app/design/frontend/creo/default/template/email/order/invoice/items.phtml
@@ -24,6 +24,8 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
+<tr >
+<img src="http://localmediauae.com/dev//creo-emailer/table-baesd/Creo-Emailer/images/parallelo.png"></a></td>
 <?php $_invoice   = $this->getInvoice() ?>
 <?php $_order     = $this->getOrder() ?>
 
