notification light boxes

--- a/app/design/frontend/creo/default/template/page/html/footer.phtml
+++ b/app/design/frontend/creo/default/template/page/html/footer.phtml
@@ -88,10 +88,10 @@ jQuery( document ).ready( function($){
 			title: msgTitle,
 			confirmButtonClass: 'btn-info',
 			content: hdata, // You can also LOAD the html data using LOAD FROM URL feature,
-			autoClose: 'cancel|6000',
+			
 		});
 	}
 });
-	
+	//autoClose: 'cancel|6000',
 	jQuery(".messages").hide();
 </script>
