--- a/app/design/frontend/creo/default/layout/local.xml
+++ b/app/design/frontend/creo/default/layout/local.xml
@@ -15,6 +15,8 @@
   <action method="removeItem"><type>skin_css</type><name>css/styles.css</name></action>
    <action method="addCss"><stylesheet>custom.css</stylesheet></action>
 	 <action method="addCss"><stylesheet>css/custom.sami.css</stylesheet></action>
+	 <action method="addCss"><stylesheet>css/jquery-confirm.min.css</stylesheet></action>
+	 <action method="addItem"><type>skin_js</type><script>js/jquery-confirm.min.js</script></action>
   <action method="removeItem"><type>skin_js</type><name>js/slideshow.js</name></action>
    <!--<action method="addCss"><stylesheet>css/rwd.css</stylesheet></action>-->
 
