--- a/app/design/frontend/creo/default/template/customer/form/loginpopup.phtml
+++ b/app/design/frontend/creo/default/template/customer/form/loginpopup.phtml
@@ -56,8 +56,13 @@
               <?php echo $this->getChildHtml('form.additional.info'); ?> </div>
           </form>
           <div class="row">
-          	<div class="col-xs-12">
-				<a class="pull-left" href="<?php echo Mage::getUrl('customer/account/create'); ?>">Create account</a>
+          	<div class="col-xs-12 text-center">
+				<a class="text-center" href="<?php echo Mage::getUrl('customer/account/create'); ?>">Create account</a>
+                <div class="login-fb col-xs-12" style="margin-bottom:20px;">
+					<a href="#" onclick="login();return false;" class="fb_button fb_button_medium">
+                        <span class="fb_button_text">Sign up with Facebook</span>
+                	</a>
+    			</div>
             </div>
           </div>
         </div>
