--- a/app/design/frontend/creo/default/template/pdp/action/uploadPhotos.phtml
+++ b/app/design/frontend/creo/default/template/pdp/action/uploadPhotos.phtml
@@ -3,6 +3,7 @@
 <div class="modal fade" id="uploadPhotos" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-lg">
 	<div class="modal-content">
+	<div class="modal-holder">
 	  <div class="modal-header">
 		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 		<h4 class="modal-title"><i class="pdc-file-upload"></i> <?php echo $this->__('Upload Files');?> </h4>
@@ -105,6 +106,7 @@
 			</form>
 		</div>
 	  </div>
+	</div>
 	</div>
   </div>
 </div>
