--- a/app/design/frontend/creo/default/template/pdp/action/uploadPhotos.phtml
+++ b/app/design/frontend/creo/default/template/pdp/action/uploadPhotos.phtml
@@ -1,19 +1,20 @@
 <!-- Modal uploadPhotos-->
 <?php $helper = $this->helper("pdp/upload"); ?>
 <div class="modal fade" id="uploadPhotos" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
+  <div class="modal-dialog modal-md">
 	<div class="modal-content">
+	<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	<div class="modal-holder">
 	  <div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		<h4 class="modal-title"><i class="pdc-file-upload"></i> <?php echo $this->__('Upload Files');?> </h4>
+		<div class="heading-holder"><h3 class="modal-title"><i class="pdc-file-upload"></i> <?php echo $this->__('Upload Files');?> </h3></div>
 	  </div>
 	  <div class="modal-body">
-		<p style="text-align:center;"><?php echo $this->__('By uploading an image you guarantee that you have read these <strong>Terms &amp; Conditions</strong> of Uploading Photos.<br/>And that you agree to abide by all clauses within these <strong>Terms and Conditions</strong>.');?></p>
-        <div class="upload-info well">
-            <?php if($helper->isImagickLoaded()) : ?>
+		<p class="popup-text01"><?php echo $this->__('By uploading an image you guarantee that you have read these <a href="#"> Terms &amp; Conditions</a> of Uploading Photos.<br/>And that you agree to abide by all clauses within these <a hr
+		#>Terms and Conditions</a>.');?></p>
+        <!--<div class="upload-info well">
+            <?php // if($helper->isImagickLoaded()) : ?>
             <div class="best-result">
-                <h4><?php echo $this->__("For Best Results") ?></h4>
+                <h4><?php // echo $this->__("For Best Results") ?></h4>
                 <ul class="formats">
                     <li>.PDF</li>
                     <li>.AI</li>
@@ -21,14 +22,14 @@
                     <li>.PSD</li>
                 </ul>
                 <ul class="tip">
-                    <li>- <?php echo $this->__("Vector Based Post Script .PS, .EPS, or PDF (Recommended)") ?></li>
-                    <li>- <?php echo $this->__("Vector Based Adobe Illustrator Photoshop with pdf option enabled .AI,PSD") ?></li>
-                    <li>- <?php echo $this->__('If using Adobe Illustrator or Photoshop "Save As" a .PDF. Save at 300 dpi') ?></li>
-                    <li>- <?php echo $this->__('Raster PNG with transparent background .PNG') ?></li>
+                    <li>- <?php // echo $this->__("Vector Based Post Script .PS, .EPS, or PDF (Recommended)") ?></li>
+                    <li>- <?php // echo $this->__("Vector Based Adobe Illustrator Photoshop with pdf option enabled .AI,PSD") ?></li>
+                    <li>- <?php // echo $this->__('If using Adobe Illustrator or Photoshop "Save As" a .PDF. Save at 300 dpi') ?></li>
+                    <li>- <?php // echo $this->__('Raster PNG with transparent background .PNG') ?></li>
                 </ul>
-            </div>
+            </div>-->
             <div class="other-formats">
-                <h4><?php echo $this->__("Other Accepted File Formats") ?></h4>
+                <h4><?php echo $this->__("Accepted File Formats") ?></h4>
                 <ul class="formats">
                     <li>.PNG</li>
                     <li>.JPG</li>
@@ -37,7 +38,7 @@
                     <li>.SVG</li>
                 </ul>
             </div>
-            <?php endif; ?>
+            <?php // endif; ?>
             <!--Upload Message, can add or edit from PDC settings-->
             <?php if($helper->getUploadNote() != "") : ?>
             <div id="msg_info">
