--- a/app/design/frontend/creo/default/template/pdp/action/textLibrary.phtml
+++ b/app/design/frontend/creo/default/template/pdp/action/textLibrary.phtml
@@ -2,9 +2,11 @@
 <div class="modal fade" id="textLibrary" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-md">
 	<div class="modal-content">
-	  <div class="modal-header">
 		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		<h4 class="modal-title"><i class="pdc-format-align-center"></i> <?php echo $this->__('Quotes Library &amp; Sample text'); ?> <input type="text" id="pdc_search_text" class="pull-right" placeholder="<?php echo $this->__('Search Text'); ?>" /></h4>
+	<div class="modal-holder">
+	  <div class="modal-header">
+		<div class="heading-holder"><h3 class="modal-title"><i class="pdc-format-align-center"></i> <?php echo $this->__('Quotes Library &amp; Sample text'); ?> </h3></div>
+	  	<div class="search-text"><label>Search Text</label><input type="text" id="pdc_search_text" class="" placeholder="<?php echo $this->__(''); ?>" /></div>
 	  </div>
 	  <div class="modal-body">
 		<div class="clear"></div>
@@ -20,6 +22,7 @@
 				</ul>
 			</div>
 	  </div>
+	</div>
 	</div>
   </div>
 </div>
