--- a/app/design/frontend/creo/default/template/pdp/action/facebookPhotos.phtml
+++ b/app/design/frontend/creo/default/template/pdp/action/facebookPhotos.phtml
@@ -24,9 +24,10 @@ window.fbAsyncInit = function() {
 <div class="modal fade" id="facebookPhotos" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-md">
 	<div class="modal-content">
-	  <div class="modal-header">
 		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		<h4 class="modal-title"><i class="pdc-facebook-square"></i> <?php echo $this->__('My Facebook Photo');?></h4>
+	<div class="modal-holder">
+	  <div class="modal-header">
+		<div class="heading-holder"><h3 class="modal-title"><i class="pdc-facebook-square"></i> <?php echo $this->__('My Facebook Photo');?></h3></div>
 	  </div>
 	  <div class="modal-body">
 			<input type="hidden" id="pdc_fb_api" value="<?php echo Mage::getStoreConfig('pdp/customer_action/facebook_api') ?>" />
@@ -51,6 +52,7 @@ window.fbAsyncInit = function() {
 		</div>
 	  </div>
 	</div> 
+	</div>
   </div>
 </div>
 <?php } ?>
