--- a/app/design/frontend/creo/default/template/pdp/action/instagramPhotos.phtml
+++ b/app/design/frontend/creo/default/template/pdp/action/instagramPhotos.phtml
@@ -10,9 +10,10 @@
 <div class="modal fade content_instagram" id="instagramPhotos" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-md">
 	<div class="modal-content">
-	  <div class="modal-header">
 		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		<h4 class="modal-title"><i class="pdc-instagram"></i> <?php echo $this->__('My Instagram Photos');?></h4>
+	<div class="modal-holder">
+	  <div class="modal-header">
+		<div class="heading-holder"><h3 class="modal-title"><i class="pdc-instagram"></i> <?php echo $this->__('My Instagram Photos');?></h3></div>
 	  </div>
 	  <div class="modal-body">
         <div id="pdc_instagram_list_img" class="no-display">
@@ -22,6 +23,7 @@
 		<button class="upload_photo_btn fb_photo_btn instagram_btn instagram-signin btn" type="button"><i class="pdc-instagram"></i><span class="pdc_ins_mes_button"><?php echo $this->__('Login Instagram');?></span></button>
         <button class="upload_photo_btn fb_photo_btn instagram_btn btn instagram-signout no-display" type="button"><i class="pdc-instagram"></i><span class="pdc_ins_mes_button"><?php echo $this->__('Logout Instagram');?></span></button>
 	  </div>
+	</div>
 	</div>
   </div>
 </div>
