--- a/js/pdp/pdc/css/pdc.css
+++ b/js/pdp/pdc/css/pdc.css
@@ -1009,6 +1009,8 @@ button:focus,
 #search_shape{height:34px; line-height:34px;}
 #shape_category{bottom:0;}
 .file-upload .glyphicon{left:0; top:1px;}
+#instagramPhotos .modal-content,
+#facebookPhotos .modal-content,
 #shapeLibrary .modal-content,
 #textLibrary .modal-content,
 .hidden-popups .modal-content {padding:2%;}
