--- a/app/design/frontend/creo/default/template/customer/form/loginpopup.phtml
+++ b/app/design/frontend/creo/default/template/customer/form/loginpopup.phtml
@@ -59,9 +59,7 @@
           	<div class="col-xs-12 text-center">
 				<a class="text-center" href="<?php echo Mage::getUrl('customer/account/create'); ?>">Create account</a>
                 <div class="login-fb col-xs-12" style="margin-bottom:20px;">
-					<a href="#" onclick="login();return false;" class="fb_button fb_button_medium">
-                        <span class="fb_button_text">Sign up with Facebook</span>
-                	</a>
+                    <?php echo $this->getLayout()->createBlock('fblogin/fblogin')->setTemplate('fblogin/bt_fblogin.phtml')->toHtml() ; ?>
     			</div>
             </div>
           </div>
