--- a/app/design/frontend/creo/default/template/persistent/customer/form/login.phtml
+++ b/app/design/frontend/creo/default/template/persistent/customer/form/login.phtml
@@ -108,9 +108,7 @@
         <?php endif; ?>
     </form>
 <?php ?>    <div class="login-fb">
-				<a href="#" onclick="login();return false;" class="fb_button fb_button_medium">
-                        <span class="fb_button_text">Sign up with Facebook</span>
-                </a>
+				<?php echo $this->getLayout()->createBlock('fblogin/fblogin')->setTemplate('fblogin/bt_fblogin.phtml')->toHtml() ; ?>
     </div><?php ?>
     <?php echo $this->getChildHtml('form_register');?>
 </div>
