--- a/app/design/frontend/creo/default/template/pdp/design/text.phtml
+++ b/app/design/frontend/creo/default/template/pdp/design/text.phtml
@@ -29,7 +29,7 @@
 	<button type="button" data-toggle="modal" data-target="#textLibrary"><?php echo $this->__('Choose Text from library'); ?> <span class="pdc-playlist-add"></span></button>
 </div>
 <?php } ?>
-<div><button id="pdc_ctext_convert"><?php echo $this->__('Convert Text/Curved') ?></button></div>
+<div><button type="button" id="pdc_ctext_convert"><?php echo $this->__('Convert Text/Curved') ?></button></div>
 <div pdc-box="curved"  style="display:none;" id="pdc_text_curved_control">
     <div><label><?php echo $this->__('Reverse :') ?></label><input type="checkbox" name="reverce" name="reverse" id="pdc_ctext_reverse" /></div>
     <div><label><?php echo $this->__('Radius :') ?></label><input type="range"  name="radius" min="0" max="100" value="50" id="pdc_ctext_radius" /></div>
