--- a/app/design/frontend/creo/default/template/page/2columns-right.phtml
+++ b/app/design/frontend/creo/default/template/page/2columns-right.phtml
@@ -43,7 +43,7 @@
 </head>
 <body<?php echo $this->getBodyClass()?' class="'.$this->getBodyClass().'"':'' ?>>
 <?php echo $this->getChildHtml('after_body_start') ?>
-<div class="wrapper">
+<div class="wrapper" id="wrapper">
     <?php echo $this->getChildHtml('global_notices') ?>
     <div class="page">
         <?php echo $this->getChildHtml('header') ?>
