--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -3633,6 +3633,8 @@ div.fme-filter dd li{overflow: visible !important;}
 	padding-bottom: 22px;
 	padding-top: 26px;
 	position: relative;
+	color: #000;
+	font: 11px/16px "Roboto Condensed",Helvetica,Arial,sans-serif;
 }
 .faq-area:before{
 	position: absolute;
@@ -4252,6 +4254,22 @@ p.availability{margin: 0;}
     width: 20%;
 }
 .pdc-thumbnail .overlay-img {display: none;}
+.faq-area .faq-frame.terms .open-close2 {
+    margin: 0 0 18px;
+    width: 100%;
+}
+.faq-area .faq-frame.terms .openeer-holder .question {
+    color: #ef4f61;
+    text-align: left;
+}
+.faq-area .faq-frame.terms .openeer-holder .question:hover,
+.faq-area .faq-frame.terms .active .openeer-holder .question{color: #fff;}
+.faq-area p.pink {color: #ef4f61;}
+.faq-area .faq-frame.terms p {margin: 0 0 12px;}
+.faq-area .faq-frame.terms .openeer-holder .question{width: 98%;}
+.faq-area .faq-frame.terms .openeer-holder .arrow{width: 2%;}
+
+
 
 
 
@@ -4377,6 +4395,7 @@ p.availability{margin: 0;}
 	.footer-form input[type="submit"]{width: 30%;}
 	.products-grid .mp_quickview_icon {top: 199px !important;}
 	.product-detail .btn-holder button:first-child{width: 79.8%;}
+	.faq-area .faq-frame.terms .openeer-holder .question {width: 97.4%;}
 }
 @media only screen and (max-width: 767px) {
 	body { min-width: 768px; }
