Privacy Policy Page

--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -4268,7 +4268,7 @@ p.availability{margin: 0;}
 .faq-area .faq-frame.terms p {margin: 0 0 12px;}
 .faq-area .faq-frame.terms .openeer-holder .question{width: 98%;}
 .faq-area .faq-frame.terms .openeer-holder .arrow{width: 2%;}
-
+.faq-area .faq-frame.terms .open-close2 h5 {text-transform: uppercase;}
 
 
 
